--- a/unbound/doh-vpn-proxy-bypass.blacklist.conf
+++ b/unbound/doh-vpn-proxy-bypass.blacklist.conf
@@ -4,10 +4,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 22 Jun 2023 07:20 UTC
-# Version: 2023.0622.0720.03
+# Last modified: 22 Jun 2023 21:10 UTC
+# Version: 2023.0622.2110.38
 # Syntax: Unbound
-# Number of entries: 6094
+# Number of entries: 6095
 #
 server:
 local-zone: "0000a-fast-proxy.de." always_nxdomain
@@ -5995,6 +5995,7 @@ local-zone: "wantaquddin.com." always_nxdomain
 local-zone: "abel.waringer-atg.de." always_nxdomain
 local-zone: "dns.warpnine.de." always_nxdomain
 local-zone: "watchproxy.com." always_nxdomain
+local-zone: "kswro.web.id." always_nxdomain
 local-zone: "doh.this.web.id." always_nxdomain
 local-zone: "1uzxr3b3jraw5nlmnvbsikiioud2vilw5.web-networking.com." always_nxdomain
 local-zone: "web-proxy.org." always_nxdomain
