--- a/unbound/doh.blacklist.conf
+++ b/unbound/doh.blacklist.conf
@@ -4,10 +4,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 22 Jun 2023 07:21 UTC
-# Version: 2023.0622.0721.19
+# Last modified: 22 Jun 2023 21:12 UTC
+# Version: 2023.0622.2112.02
 # Syntax: Unbound
-# Number of entries: 751
+# Number of entries: 752
 #
 server:
 local-zone: "ns.00dani.me." always_nxdomain
@@ -738,6 +738,7 @@ local-zone: "dns.wakgood.net." always_nxdomain
 local-zone: "wantaquddin.com." always_nxdomain
 local-zone: "abel.waringer-atg.de." always_nxdomain
 local-zone: "dns.warpnine.de." always_nxdomain
+local-zone: "kswro.web.id." always_nxdomain
 local-zone: "doh.this.web.id." always_nxdomain
 local-zone: "dns.wevpn.com." always_nxdomain
 local-zone: "dns-weblock.wevpn.com." always_nxdomain
