--- a/unbound/personal.blacklist.conf
+++ b/unbound/personal.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 1 day
-# Last modified: 22 Jun 2023 08:26 UTC
-# Version: 2023.0622.0826.05
+# Last modified: 22 Jun 2023 22:28 UTC
+# Version: 2023.0622.2228.20
 # Syntax: Unbound
-# Number of entries: 43381
+# Number of entries: 43450
 #
 server:
 local-zone: "000space.com." always_nxdomain
@@ -199,6 +199,7 @@ local-zone: "apm3.music.163.com." always_nxdomain
 local-zone: "clientlog.music.163.com." always_nxdomain
 local-zone: "clientlog3.music.163.com." always_nxdomain
 local-zone: "nex.163.com." always_nxdomain
+local-zone: "dl.reg.163.com." always_nxdomain
 local-zone: "temp.163.com." always_nxdomain
 local-zone: "yaolu.yuedu.163.com." always_nxdomain
 local-zone: "ac.dun.163yun.com." always_nxdomain
@@ -275,6 +276,7 @@ local-zone: "1rx.io." always_nxdomain
 local-zone: "1rxntv.io." always_nxdomain
 local-zone: "1sapp.com." always_nxdomain
 local-zone: "1serial.tv." always_nxdomain
+local-zone: "1shoppingcart.com." always_nxdomain
 local-zone: "1sqfobn52.de." always_nxdomain
 local-zone: "1st-mail.jp." always_nxdomain
 local-zone: "1startfiledownload1.com." always_nxdomain
@@ -4747,6 +4749,7 @@ local-zone: "omniture-ssl.direct.asda.com." always_nxdomain
 local-zone: "omniture.groceries.asda.com." always_nxdomain
 local-zone: "omniture-ssl.groceries.asda.com." always_nxdomain
 local-zone: "asdasdad.net." always_nxdomain
+local-zone: "asdasdwqer21sd.vip." always_nxdomain
 local-zone: "asdffe22.com." always_nxdomain
 local-zone: "asdguswfys.com." always_nxdomain
 local-zone: "asdnow.xyz." always_nxdomain
@@ -6849,6 +6852,7 @@ local-zone: "botherherself.website." always_nxdomain
 local-zone: "botize.com." always_nxdomain
 local-zone: "botman.ninja." always_nxdomain
 local-zone: "botndm.nl." always_nxdomain
+local-zone: "botongfuff.uno." always_nxdomain
 local-zone: "bottlerobust.com." always_nxdomain
 local-zone: "bottlestonightapp.com." always_nxdomain
 local-zone: "boudja.com." always_nxdomain
@@ -6948,8 +6952,7 @@ local-zone: "brasthingut.com." always_nxdomain
 local-zone: "braun634.com." always_nxdomain
 local-zone: "analytics.brave.com." always_nxdomain
 local-zone: "brave-evolution.com." always_nxdomain
-local-zone: "assets.bravenet.com." always_nxdomain
-local-zone: "pub16.bravenet.com." always_nxdomain
+local-zone: "bravenet.com." always_nxdomain
 local-zone: "bravetense.com." always_nxdomain
 local-zone: "bravospots.com." always_nxdomain
 local-zone: "ijaabm.bravotv.com." always_nxdomain
@@ -7676,6 +7679,7 @@ local-zone: "carolroth.com." always_nxdomain
 local-zone: "carpatree.com." always_nxdomain
 local-zone: "carpediem.fr." always_nxdomain
 local-zone: "carpentercomparison.com." always_nxdomain
+local-zone: "smetrics.carphonewarehouse.com." always_nxdomain
 local-zone: "content-strl.courses-en-ligne.carrefour.fr." always_nxdomain
 local-zone: "ea.carrefour.fr." always_nxdomain
 local-zone: "ea.online.carrefour.fr." always_nxdomain
@@ -14089,7 +14093,6 @@ local-zone: "newrevive.detik.com." always_nxdomain
 local-zone: "rec.detik.com." always_nxdomain
 local-zone: "detmir-stats.ru." always_nxdomain
 local-zone: "sxjfhh.detroitnews.com." always_nxdomain
-local-zone: "deugahat.gq." always_nxdomain
 local-zone: "data-a25b878079.deutsche-apotheker-zeitung.de." always_nxdomain
 local-zone: "aa.deutsche-bank.de." always_nxdomain
 local-zone: "at.deutsche-bank.de." always_nxdomain
@@ -14305,7 +14308,6 @@ local-zone: "analyse.dipf.de." always_nxdomain
 local-zone: "diplewhigged.com." always_nxdomain
 local-zone: "diplic.com." always_nxdomain
 local-zone: "diplomahawaii.com." always_nxdomain
-local-zone: "diploms-rusian.com." always_nxdomain
 local-zone: "dipseymontia.com." always_nxdomain
 local-zone: "dircont3.com." always_nxdomain
 local-zone: "direct-energy.ltd." always_nxdomain
@@ -15117,6 +15119,7 @@ local-zone: "dxbott.ae." always_nxdomain
 local-zone: "smetrics.dxc.com." always_nxdomain
 local-zone: "dxfxuywc.xyz." always_nxdomain
 local-zone: "bn.dxlive.com." always_nxdomain
+local-zone: "tags.dxmdp.com." always_nxdomain
 local-zone: "dxmjyxksvc.com." always_nxdomain
 local-zone: "dxraceroutlet.com." always_nxdomain
 local-zone: "rc.dxsvr.com." always_nxdomain
@@ -17897,6 +17900,7 @@ local-zone: "data-17c7ec5f16.fussballfieber.de." always_nxdomain
 local-zone: "futill.com." always_nxdomain
 local-zone: "future-marvellous.com." always_nxdomain
 local-zone: "futureadpro.com." always_nxdomain
+local-zone: "futureads.io." always_nxdomain
 local-zone: "bordeaux.futurecdn.net." always_nxdomain
 local-zone: "champagne.futurecdn.net." always_nxdomain
 local-zone: "trk.futureelectronics.com." always_nxdomain
@@ -18802,6 +18806,7 @@ local-zone: "api.telemetry.watchabc.go.com." always_nxdomain
 local-zone: "c.go-mpulse.net." always_nxdomain
 local-zone: "s.go-mpulse.net." always_nxdomain
 local-zone: "s2.go-mpulse.net." always_nxdomain
+local-zone: "go-to-website.com." always_nxdomain
 local-zone: "go1news.biz." always_nxdomain
 local-zone: "go2.global." always_nxdomain
 local-zone: "go2affise.com." always_nxdomain
@@ -19636,7 +19641,6 @@ local-zone: "hardtofindmilk.com." always_nxdomain
 local-zone: "hardwaretakeoutintimidate.com." always_nxdomain
 local-zone: "hardwomen.com." always_nxdomain
 local-zone: "hardyload.com." always_nxdomain
-local-zone: "harib-eir.info." always_nxdomain
 local-zone: "hariken.co." always_nxdomain
 local-zone: "atarget.harley-davidson.com." always_nxdomain
 local-zone: "smetrics.harley-davidson.com." always_nxdomain
@@ -20990,6 +20994,7 @@ local-zone: "push.ilan365.net." always_nxdomain
 local-zone: "ilaterdeallyi.info." always_nxdomain
 local-zone: "ilbanner.com." always_nxdomain
 local-zone: "ad.ilcdn.fi." always_nxdomain
+local-zone: "ileacfaretta.digital." always_nxdomain
 local-zone: "ileeckut.com." always_nxdomain
 local-zone: "ili.net." always_nxdomain
 local-zone: "iliifmido.xyz." always_nxdomain
@@ -21460,7 +21465,6 @@ local-zone: "csr.inspsearchapi.com." always_nxdomain
 local-zone: "inspxtrc.com." always_nxdomain
 local-zone: "instabug.com." always_nxdomain
 local-zone: "assets.instacart.com." always_nxdomain
-local-zone: "countly.server.sftp.instacart.com." always_nxdomain
 local-zone: "shoppers.instacartemail.com." always_nxdomain
 local-zone: "instadrama.site." always_nxdomain
 local-zone: "instagram-my.ru." always_nxdomain
@@ -26297,6 +26301,73 @@ local-zone: "mkt9570.com." always_nxdomain
 local-zone: "mkt9752.com." always_nxdomain
 local-zone: "mkt9942.com." always_nxdomain
 local-zone: "mkt9999.com." always_nxdomain
+local-zone: "mkto-ab010012.com." always_nxdomain
+local-zone: "mkto-ab020242.com." always_nxdomain
+local-zone: "mkto-ab030222.com." always_nxdomain
+local-zone: "mkto-ab040147.com." always_nxdomain
+local-zone: "mkto-ab060144.com." always_nxdomain
+local-zone: "mkto-ab100016.com." always_nxdomain
+local-zone: "mkto-ab100192.com." always_nxdomain
+local-zone: "mkto-ab110007.com." always_nxdomain
+local-zone: "mkto-ab110049.com." always_nxdomain
+local-zone: "mkto-ab140180.com." always_nxdomain
+local-zone: "mkto-ab180024.com." always_nxdomain
+local-zone: "mkto-ab190021.com." always_nxdomain
+local-zone: "mkto-ab200129.com." always_nxdomain
+local-zone: "mkto-ab250105.com." always_nxdomain
+local-zone: "mkto-ab250163.com." always_nxdomain
+local-zone: "mkto-ab250167.com." always_nxdomain
+local-zone: "mkto-ab260134.com." always_nxdomain
+local-zone: "mkto-ab300154.com." always_nxdomain
+local-zone: "mkto-ab320104.com." always_nxdomain
+local-zone: "mkto-ab320137.com." always_nxdomain
+local-zone: "mkto-ab330006.com." always_nxdomain
+local-zone: "mkto-ab330152.com." always_nxdomain
+local-zone: "mkto-ab330197.com." always_nxdomain
+local-zone: "mkto-ab340022.com." always_nxdomain
+local-zone: "mkto-ab390155.com." always_nxdomain
+local-zone: "mkto-ab390175.com." always_nxdomain
+local-zone: "mkto-ab420081.com." always_nxdomain
+local-zone: "mkto-ab470202.com." always_nxdomain
+local-zone: "mkto-ab540059.com." always_nxdomain
+local-zone: "mkto-ab540064.com." always_nxdomain
+local-zone: "mkto-ab550067.com." always_nxdomain
+local-zone: "mkto-ab550140.com." always_nxdomain
+local-zone: "mkto-ab550168.com." always_nxdomain
+local-zone: "mkto-abm0016.com." always_nxdomain
+local-zone: "mkto-abm0229.com." always_nxdomain
+local-zone: "mkto-connect.com." always_nxdomain
+local-zone: "mkto-d0170.com." always_nxdomain
+local-zone: "mkto-j0126.com." always_nxdomain
+local-zone: "mkto-k0023.com." always_nxdomain
+local-zone: "mkto-lon040152.com." always_nxdomain
+local-zone: "mkto-lon090082.com." always_nxdomain
+local-zone: "mkto-lon100159.com." always_nxdomain
+local-zone: "mkto-lon100168.com." always_nxdomain
+local-zone: "mkto-nld1010023.com." always_nxdomain
+local-zone: "mkto-sj030214.com." always_nxdomain
+local-zone: "mkto-sj040252.com." always_nxdomain
+local-zone: "mkto-sj050105.com." always_nxdomain
+local-zone: "mkto-sj070130.com." always_nxdomain
+local-zone: "mkto-sj100138.com." always_nxdomain
+local-zone: "mkto-sj160145.com." always_nxdomain
+local-zone: "mkto-sj180011.com." always_nxdomain
+local-zone: "mkto-sj190104.com." always_nxdomain
+local-zone: "mkto-sj200192.com." always_nxdomain
+local-zone: "mkto-sj230006.com." always_nxdomain
+local-zone: "mkto-sj240021.com." always_nxdomain
+local-zone: "mkto-sj250172.com." always_nxdomain
+local-zone: "mkto-sj270080.com." always_nxdomain
+local-zone: "mkto-sj270172.com." always_nxdomain
+local-zone: "mkto-sj310059.com." always_nxdomain
+local-zone: "mkto-sj320047.com." always_nxdomain
+local-zone: "mkto-sj320055.com." always_nxdomain
+local-zone: "mkto-sj330006.com." always_nxdomain
+local-zone: "mkto-sj360076.com." always_nxdomain
+local-zone: "mkto-sj370153.com." always_nxdomain
+local-zone: "mkto-sj380030.com." always_nxdomain
+local-zone: "mkto-sj390015.com." always_nxdomain
+local-zone: "mkto-test.com." always_nxdomain
 local-zone: "mktoresp.com." always_nxdomain
 local-zone: "mktorest.com." always_nxdomain
 local-zone: "etui.fs.ml.com." always_nxdomain
@@ -27755,7 +27826,6 @@ local-zone: "newcanadianmedia.ca." always_nxdomain
 local-zone: "newcaptchahere.top." always_nxdomain
 local-zone: "rtb2-apac.newchallenges-dsp.com." always_nxdomain
 local-zone: "static-rtb2.newchallenges-dsp.com." always_nxdomain
-local-zone: "newcialed.com." always_nxdomain
 local-zone: "newdomain.center." always_nxdomain
 local-zone: "newdompet.com." always_nxdomain
 local-zone: "newdosug.eu." always_nxdomain
@@ -32862,7 +32932,6 @@ local-zone: "residentshove.com." always_nxdomain
 local-zone: "residualpayments.com." always_nxdomain
 local-zone: "resigndictationhorns.com." always_nxdomain
 local-zone: "resignedsauna.com." always_nxdomain
-local-zone: "resigt.com." always_nxdomain
 local-zone: "resilesfuriant.guru." always_nxdomain
 local-zone: "resistcorrectly.com." always_nxdomain
 local-zone: "resniks.pro." always_nxdomain
@@ -33693,6 +33762,7 @@ local-zone: "s-onetag.com." always_nxdomain
 local-zone: "s-space.jp." always_nxdomain
 local-zone: "s1cta.com." always_nxdomain
 local-zone: "s1m4nohq.de." always_nxdomain
+local-zone: "media01.s24.com." always_nxdomain
 local-zone: "widget.s24.com." always_nxdomain
 local-zone: "pro-web-metrics.alias.s24cloud.net." always_nxdomain
 local-zone: "s2517.com." always_nxdomain
@@ -34666,6 +34736,7 @@ local-zone: "shemale.team." always_nxdomain
 local-zone: "shenbabao.com." always_nxdomain
 local-zone: "sherkhundi.com." always_nxdomain
 local-zone: "sherouscolvered.com." always_nxdomain
+local-zone: "sherv.net." always_nxdomain
 local-zone: "shesubscriptions.com." always_nxdomain
 local-zone: "shguy.cyou." always_nxdomain
 local-zone: "hm.e.shifen.com." always_nxdomain
@@ -39475,7 +39546,6 @@ local-zone: "unlimits.net." always_nxdomain
 local-zone: "unlock-protocol.com." always_nxdomain
 local-zone: "unltdentertainment.co." always_nxdomain
 local-zone: "unmasksxyloma.uno." always_nxdomain
-local-zone: "unmetalised.com." always_nxdomain
 local-zone: "unmightboxen.com." always_nxdomain
 local-zone: "unmistdistune.guru." always_nxdomain
 local-zone: "unnumelom.com." always_nxdomain
@@ -40416,6 +40486,7 @@ local-zone: "visionarycompany52.com." always_nxdomain
 local-zone: "visioncriticalpanels.com." always_nxdomain
 local-zone: "visionplusapps.com." always_nxdomain
 local-zone: "visistat.com." always_nxdomain
+local-zone: "visit-website.com." always_nxdomain
 local-zone: "marketing.visitabq.org." always_nxdomain
 local-zone: "marketing.visitbatonrouge.com." always_nxdomain
 local-zone: "marketing.visitcorpuschristi.com." always_nxdomain
@@ -41092,7 +41163,6 @@ local-zone: "web-counter.net." always_nxdomain
 local-zone: "web-guardian.xyz." always_nxdomain
 local-zone: "web-security.cloud." always_nxdomain
 local-zone: "web-stat.com." always_nxdomain
-local-zone: "web-telegramm.org." always_nxdomain
 local-zone: "web-trackers.com." always_nxdomain
 local-zone: "web0.eu." always_nxdomain
 local-zone: "web1000.com." always_nxdomain
@@ -42370,7 +42440,6 @@ local-zone: "xwbspx.xyz." always_nxdomain
 local-zone: "xwdsp.com." always_nxdomain
 local-zone: "xwqvytuiko.com." always_nxdomain
 local-zone: "xwuad.com." always_nxdomain
-local-zone: "xxaparfuel.xyz." always_nxdomain
 local-zone: "xxccdshj.com." always_nxdomain
 local-zone: "xxlargepop.com." always_nxdomain
 local-zone: "xxtalp.xyz." always_nxdomain
