--- a/unbound/doh-vpn-proxy-bypass.blacklist.conf
+++ b/unbound/doh-vpn-proxy-bypass.blacklist.conf
@@ -4,10 +4,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 22 Jun 2023 21:10 UTC
-# Version: 2023.0622.2110.38
+# Last modified: 23 Jun 2023 21:45 UTC
+# Version: 2023.0623.2145.23
 # Syntax: Unbound
-# Number of entries: 6095
+# Number of entries: 6100
 #
 server:
 local-zone: "0000a-fast-proxy.de." always_nxdomain
@@ -33,6 +33,7 @@ local-zone: "2fastsurfer.com." always_nxdomain
 local-zone: "2fastsurfer.eu." always_nxdomain
 local-zone: "2fastsurfer.us." always_nxdomain
 local-zone: "2proxy.de." always_nxdomain
+local-zone: "2proxy.us." always_nxdomain
 local-zone: "2ub.top." always_nxdomain
 local-zone: "33253.com." always_nxdomain
 local-zone: "doh.360.cn." always_nxdomain
@@ -43,6 +44,7 @@ local-zone: "42kjb11.net." always_nxdomain
 local-zone: "doh.42l.fr." always_nxdomain
 local-zone: "4everproxy.com." always_nxdomain
 local-zone: "4proxy.de." always_nxdomain
+local-zone: "4proxy.us." always_nxdomain
 local-zone: "dns.52306.org." always_nxdomain
 local-zone: "57824.com." always_nxdomain
 local-zone: "dns.5ososea.com." always_nxdomain
@@ -180,10 +182,10 @@ local-zone: "vpn.avg.tools.avast.com." always_nxdomain
 local-zone: "secure.avastdns.com." always_nxdomain
 local-zone: "adguard.avdkishore.dev." always_nxdomain
 local-zone: "avira-vpn.com." always_nxdomain
+local-zone: "avoidance.info." always_nxdomain
 local-zone: "awabo.com." always_nxdomain
 local-zone: "awebproxy.com." always_nxdomain
 local-zone: "awhoer.net." always_nxdomain
-local-zone: "axaxa.fun." always_nxdomain
 local-zone: "azirevpn.com." always_nxdomain
 local-zone: "dns.azsopro.net." always_nxdomain
 local-zone: "vpn.azure.com." always_nxdomain
@@ -203,6 +205,7 @@ local-zone: "jp-dns1.bancuh.com." always_nxdomain
 local-zone: "sg-dns1.bancuh.com." always_nxdomain
 local-zone: "base99.com." always_nxdomain
 local-zone: "bcandrade.ml." always_nxdomain
+local-zone: "bdns.at." always_nxdomain
 local-zone: "bdns.io." always_nxdomain
 local-zone: "bdns.link." always_nxdomain
 local-zone: "bdns.nu." always_nxdomain
@@ -211,6 +214,7 @@ local-zone: "bebasid.com." always_nxdomain
 local-zone: "beepassvpn.com." always_nxdomain
 local-zone: "beevpn.com." always_nxdomain
 local-zone: "adguard.beliefanx.cn." always_nxdomain
+local-zone: "bellproxy.com." always_nxdomain
 local-zone: "dns.belnet.be." always_nxdomain
 local-zone: "dns.benpro.fr." always_nxdomain
 local-zone: "bestfreevpn.com." always_nxdomain
@@ -278,6 +282,7 @@ local-zone: "browsec.com." always_nxdomain
 local-zone: "browserproxy.net." always_nxdomain
 local-zone: "doh.bt.com." always_nxdomain
 local-zone: "btguard.com." always_nxdomain
+local-zone: "bubbleset.com." always_nxdomain
 local-zone: "buffered.com." always_nxdomain
 local-zone: "bunkerbustervpn.com." always_nxdomain
 local-zone: "byewall.com." always_nxdomain
@@ -307,6 +312,7 @@ local-zone: "censurfridns.dk." always_nxdomain
 local-zone: "centidoo.com." always_nxdomain
 local-zone: "ibuki.cgnat.net." always_nxdomain
 local-zone: "changemyip.com." always_nxdomain
+local-zone: "changemyip.uk." always_nxdomain
 local-zone: "chaos-system.de." always_nxdomain
 local-zone: "checkpoint.com." always_nxdomain
 local-zone: "dns.chenu.ch." always_nxdomain
@@ -671,7 +677,6 @@ local-zone: "fortinet.com." always_nxdomain
 local-zone: "fortinet.net." always_nxdomain
 local-zone: "fortiwebcloud.net." always_nxdomain
 local-zone: "fproxy.net." always_nxdomain
-local-zone: "dns.frank-ruan.com." always_nxdomain
 local-zone: "free-proxy.com." always_nxdomain
 local-zone: "free-proxy.cz." always_nxdomain
 local-zone: "free-proxy.xyz." always_nxdomain
