--- a/unbound/dyndns.blacklist.conf
+++ b/unbound/dyndns.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 22 Jun 2023 21:13 UTC
-# Version: 2023.0622.2113.12
+# Last modified: 23 Jun 2023 21:48 UTC
+# Version: 2023.0623.2148.27
 # Syntax: Unbound
-# Number of entries: 1555
+# Number of entries: 1558
 #
 server:
 local-zone: "0000000000000000000000.com." always_nxdomain
@@ -120,6 +120,7 @@ local-zone: "baden.ru." always_nxdomain
 local-zone: "bagus.org." always_nxdomain
 local-zone: "baikabibai.com." always_nxdomain
 local-zone: "bakli.ru." always_nxdomain
+local-zone: "bandweite.de." always_nxdomain
 local-zone: "barbaforte.org." always_nxdomain
 local-zone: "barratella.com." always_nxdomain
 local-zone: "barrel-of-knowledge.info." always_nxdomain
@@ -251,6 +252,7 @@ local-zone: "cpsnet.cz." always_nxdomain
 local-zone: "crabdance.com." always_nxdomain
 local-zone: "crackedsidewalks.com." always_nxdomain
 local-zone: "csproject.org." always_nxdomain
+local-zone: "ctproduction.net." always_nxdomain
 local-zone: "cuesinc.com." always_nxdomain
 local-zone: "cupddns.net." always_nxdomain
 local-zone: "custom-gaming.net." always_nxdomain
@@ -287,6 +289,7 @@ local-zone: "de-a.org." always_nxdomain
 local-zone: "deaftone.com." always_nxdomain
 local-zone: "dearabba.org." always_nxdomain
 local-zone: "death-by-monkeys.com." always_nxdomain
+local-zone: "death-education.com." always_nxdomain
 local-zone: "dedyn.io." always_nxdomain
 local-zone: "demosoftonline.com." always_nxdomain
 local-zone: "demoteam.ch." always_nxdomain
