--- a/unbound/hoster.blacklist.conf
+++ b/unbound/hoster.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 22 Jun 2023 07:23 UTC
-# Version: 2023.0622.0723.21
+# Last modified: 23 Jun 2023 21:49 UTC
+# Version: 2023.0623.2149.55
 # Syntax: Unbound
-# Number of entries: 2059
+# Number of entries: 2060
 #
 server:
 local-zone: "000a.de." always_nxdomain
@@ -582,6 +582,7 @@ local-zone: "byethost.com." always_nxdomain
 local-zone: "byethost3.com." always_nxdomain
 local-zone: "byto.de." always_nxdomain
 local-zone: "bz.tc." always_nxdomain
+local-zone: "c.la." always_nxdomain
 local-zone: "c.pl." always_nxdomain
 local-zone: "ca.gp." always_nxdomain
 local-zone: "campanamedicalcenter.it." always_nxdomain
