--- a/unbound/anti.piracy.blacklist.conf
+++ b/unbound/anti.piracy.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 22 Jun 2023 21:15 UTC
-# Version: 2023.0622.2115.03
+# Last modified: 23 Jun 2023 21:51 UTC
+# Version: 2023.0623.2151.40
 # Syntax: Unbound
-# Number of entries: 6760
+# Number of entries: 6793
 #
 server:
 local-zone: "zer0day.000webhostapp.com." always_nxdomain
@@ -44,6 +44,7 @@ local-zone: "123movieonline.xyz." always_nxdomain
 local-zone: "123movies.ag." always_nxdomain
 local-zone: "123movies.archi." always_nxdomain
 local-zone: "123movies.army." always_nxdomain
+local-zone: "123movies.church." always_nxdomain
 local-zone: "123movies.coach." always_nxdomain
 local-zone: "123movies.com." always_nxdomain
 local-zone: "123movies.domains." always_nxdomain
@@ -128,6 +129,7 @@ local-zone: "1377x.is." always_nxdomain
 local-zone: "141jav.com." always_nxdomain
 local-zone: "147job.com." always_nxdomain
 local-zone: "107.182.30.76.16clouds.com." always_nxdomain
+local-zone: "freedom.1776.ga." always_nxdomain
 local-zone: "1bt.ru." always_nxdomain
 local-zone: "1clickdown.com." always_nxdomain
 local-zone: "1fichier.com." always_nxdomain
@@ -149,11 +151,13 @@ local-zone: "1watch-free.cc." always_nxdomain
 local-zone: "1watch-free.me." always_nxdomain
 local-zone: "1xstream.com." always_nxdomain
 local-zone: "20links.com." always_nxdomain
+local-zone: "23movies.xyz." always_nxdomain
 local-zone: "24-download.com." always_nxdomain
 local-zone: "24-downloads.com." always_nxdomain
 local-zone: "240x320.ru." always_nxdomain
 local-zone: "247pirate.org." always_nxdomain
 local-zone: "247prox.link." always_nxdomain
+local-zone: "247proxydl.org." always_nxdomain
 local-zone: "24warez.ru." always_nxdomain
 local-zone: "2600.com." always_nxdomain
 local-zone: "2bbit.com." always_nxdomain
@@ -174,14 +178,19 @@ local-zone: "321n.net." always_nxdomain
 local-zone: "tracker.3304399.com." always_nxdomain
 local-zone: "337hhh.xyz." always_nxdomain
 local-zone: "365watchtv.com." always_nxdomain
+local-zone: "36dm.club." always_nxdomain
+local-zone: "36dm.com." always_nxdomain
+local-zone: "tracker.3arbya.com." always_nxdomain
 local-zone: "3dmgame.com." always_nxdomain
 local-zone: "3dsdb.com." always_nxdomain
 local-zone: "bt.3kb.xyz." always_nxdomain
 local-zone: "3movierulz.sc." always_nxdomain
 local-zone: "3netbd.com." always_nxdomain
 local-zone: "3rcommunications.com." always_nxdomain
+local-zone: "3warez.com." always_nxdomain
 local-zone: "generatory.3xg.pl." always_nxdomain
 local-zone: "420project.org." always_nxdomain
+local-zone: "45rpmtorrents.com." always_nxdomain
 local-zone: "480mkv.com." always_nxdomain
 local-zone: "480ptvshows.com." always_nxdomain
 local-zone: "4allprograms.net." always_nxdomain
@@ -283,6 +292,7 @@ local-zone: "7ur.ru." always_nxdomain
 local-zone: "87av.com." always_nxdomain
 local-zone: "open.8a.is." always_nxdomain
 local-zone: "8ebooks.net." always_nxdomain
+local-zone: "8hacks.com." always_nxdomain
 local-zone: "8kun.top." always_nxdomain
 local-zone: "8millimeters.com." always_nxdomain
 local-zone: "8putlocker.com." always_nxdomain
@@ -323,6 +333,7 @@ local-zone: "acglover.top." always_nxdomain
 local-zone: "acgnx.se." always_nxdomain
 local-zone: "opentracker.acgnx.com." always_nxdomain
 local-zone: "open.acgnxtracker.com." always_nxdomain
+local-zone: "acgsou.com." always_nxdomain
 local-zone: "open.acgtracker.com." always_nxdomain
 local-zone: "torrenttracker.nwc.acsalaska.net." always_nxdomain
 local-zone: "activembd.com." always_nxdomain
@@ -412,6 +423,7 @@ local-zone: "alphaomega.me." always_nxdomain
 local-zone: "alpharatio.cc." always_nxdomain
 local-zone: "alt-torrent.com." always_nxdomain
 local-zone: "altbinz.net." always_nxdomain
+local-zone: "altermind.net." always_nxdomain
 local-zone: "alterupload.com." always_nxdomain
 local-zone: "tracker.altrosky.nl." always_nxdomain
 local-zone: "amaderftp.net." always_nxdomain
@@ -424,6 +436,7 @@ local-zone: "amrbd.com." always_nxdomain
 local-zone: "anbudom.net." always_nxdomain
 local-zone: "andr.net." always_nxdomain
 local-zone: "androeed.ru." always_nxdomain
+local-zone: "androidkino.org." always_nxdomain
 local-zone: "androidrookies.com." always_nxdomain
 local-zone: "ani-tsuzuki.net." always_nxdomain
 local-zone: "anicloud.domains." always_nxdomain
@@ -500,6 +513,7 @@ local-zone: "animereborn.net." always_nxdomain
 local-zone: "animerush.tv." always_nxdomain
 local-zone: "animes.so." always_nxdomain
 local-zone: "torrents.animes-bg.com." always_nxdomain
+local-zone: "animesa.ga." always_nxdomain
 local-zone: "animeshow.tv." always_nxdomain
 local-zone: "animesim.com." always_nxdomain
 local-zone: "animesimple.com." always_nxdomain
@@ -540,6 +554,7 @@ local-zone: "anthousebd.net." always_nxdomain
 local-zone: "antsmarching.org." always_nxdomain
 local-zone: "anvilofsound.com." always_nxdomain
 local-zone: "anycracks.com." always_nxdomain
+local-zone: "anytv.live." always_nxdomain
 local-zone: "anzaq.com." always_nxdomain
 local-zone: "anzfile.net." always_nxdomain
 local-zone: "aostv.app." always_nxdomain
@@ -561,6 +576,7 @@ local-zone: "apkocean.net." always_nxdomain
 local-zone: "apkpure.com." always_nxdomain
 local-zone: "apksum.com." always_nxdomain
 local-zone: "appdb.to." always_nxdomain
+local-zone: "applelinkbd.net." always_nxdomain
 local-zone: "applenetbd.com." always_nxdomain
 local-zone: "appmeter.ru." always_nxdomain
 local-zone: "free.appnee.com." always_nxdomain
@@ -646,6 +662,7 @@ local-zone: "auratorrent.pl." always_nxdomain
 local-zone: "aurora-raws.com." always_nxdomain
 local-zone: "aussietorrents.com." always_nxdomain
 local-zone: "autobitx.com." always_nxdomain
+local-zone: "autocadbmjes.com." always_nxdomain
 local-zone: "autocadbmsa.com." always_nxdomain
 local-zone: "autocadbnaqk.com." always_nxdomain
 local-zone: "autocadgou.com." always_nxdomain
@@ -666,10 +683,12 @@ local-zone: "awesome-hd.com." always_nxdomain
 local-zone: "awesome-hd.me." always_nxdomain
 local-zone: "axell24.ru." always_nxdomain
 local-zone: "axemovies.net." always_nxdomain
+local-zone: "axxo.me." always_nxdomain
 local-zone: "axxomovies.org." always_nxdomain
 local-zone: "azibtorrent.com." always_nxdomain
 local-zone: "azm.to." always_nxdomain
 local-zone: "azmovies.xyz." always_nxdomain
+local-zone: "azshare.info." always_nxdomain
 local-zone: "b2s-share.com." always_nxdomain
 local-zone: "b98.tv." always_nxdomain
 local-zone: "baberepublic.com." always_nxdomain
@@ -753,6 +772,7 @@ local-zone: "bedownload.net." always_nxdomain
 local-zone: "bedro.cloud." always_nxdomain
 local-zone: "beeflix.biz." always_nxdomain
 local-zone: "tracker.beeimg.com." always_nxdomain
+local-zone: "beemp3.cc." always_nxdomain
 local-zone: "beemp3s.org." always_nxdomain
 local-zone: "beetvapk.net." always_nxdomain
 local-zone: "bellator.com." always_nxdomain
@@ -892,6 +912,7 @@ local-zone: "tracker.blacksparrowmedia.net." always_nxdomain
 local-zone: "blacktiesports.net." always_nxdomain
 local-zone: "tracker.blackunicorn.xyz." always_nxdomain
 local-zone: "blackz.ro." always_nxdomain
+local-zone: "blades-heaven.com." always_nxdomain
 local-zone: "blagblagblag.org." always_nxdomain
 local-zone: "blockbuster.to." always_nxdomain
 local-zone: "100-postal2.blogspot.com." always_nxdomain
@@ -949,6 +970,7 @@ local-zone: "blu-torrents.net." always_nxdomain
 local-zone: "bludv.com." always_nxdomain
 local-zone: "blue-bytez.com." always_nxdomain
 local-zone: "blue-whitegt.com." always_nxdomain
+local-zone: "blue1city.net." always_nxdomain
 local-zone: "bluebird-hd.org." always_nxdomain
 local-zone: "tracker.bluefrog.pw." always_nxdomain
 local-zone: "blues-brothers.biz." always_nxdomain
@@ -984,6 +1006,7 @@ local-zone: "bomplay.com." always_nxdomain
 local-zone: "bondhuitbd.com." always_nxdomain
 local-zone: "bonjourmissmary.com." always_nxdomain
 local-zone: "bonsaihd.fun." always_nxdomain
+local-zone: "bonsaihd.live." always_nxdomain
 local-zone: "bookddl.com." always_nxdomain
 local-zone: "bookgrill.com." always_nxdomain
 local-zone: "books-share.com." always_nxdomain
@@ -994,6 +1017,7 @@ local-zone: "bootytape.com." always_nxdomain
 local-zone: "bootytorrents.com." always_nxdomain
 local-zone: "labs.boramalper.org." always_nxdomain
 local-zone: "borntonull.com." always_nxdomain
+local-zone: "bossbd.live." always_nxdomain
 local-zone: "bossbd.net." always_nxdomain
 local-zone: "bosscast.eu." always_nxdomain
 local-zone: "bosscast.net." always_nxdomain
@@ -1089,6 +1113,7 @@ local-zone: "burningseries.ma." always_nxdomain
 local-zone: "burningseries.sx." always_nxdomain
 local-zone: "burningseries.vc." always_nxdomain
 local-zone: "bushtorrent.com." always_nxdomain
+local-zone: "scrapcomputers.busydizzys.com." always_nxdomain
 local-zone: "butterproject.org." always_nxdomain
 local-zone: "buycheapadobesoftware.com." always_nxdomain
 local-zone: "bwtorrents.com." always_nxdomain
@@ -1233,6 +1258,7 @@ local-zone: "tracker.cloudit.top." always_nxdomain
 local-zone: "cloudtorrents.com." always_nxdomain
 local-zone: "cloudvideo.tv." always_nxdomain
 local-zone: "hd.club.tw." always_nxdomain
+local-zone: "torrent-comet.club-23.org." always_nxdomain
 local-zone: "club-mst3k.com." always_nxdomain
 local-zone: "clubfilm.ir." always_nxdomain
 local-zone: "bruh.cluster.ws." always_nxdomain
@@ -1246,6 +1272,7 @@ local-zone: "cmovieshd.bz." always_nxdomain
 local-zone: "cmovieshd.net." always_nxdomain
 local-zone: "fh2.cmp-gaming.com." always_nxdomain
 local-zone: "cnetworkbd.net." always_nxdomain
+local-zone: "cnp.cx." always_nxdomain
 local-zone: "althub.co.za." always_nxdomain
 local-zone: "mirror.aptus.co.tz." always_nxdomain
 local-zone: "bioquantum.co.za." always_nxdomain
@@ -1327,6 +1354,8 @@ local-zone: "slnisp.com.bd." always_nxdomain
 local-zone: "thepiratebays.com.se." always_nxdomain
 local-zone: "tnetwork.com.bd." always_nxdomain
 local-zone: "triangle.com.bd." always_nxdomain
+local-zone: "tracker1.wasabii.com.tw." always_nxdomain
+local-zone: "tracker2.wasabii.com.tw." always_nxdomain
 local-zone: "watchmovies1.com.pk." always_nxdomain
 local-zone: "wormsblast.com.pl." always_nxdomain
 local-zone: "www.midea123.z-media.com.cn." always_nxdomain
@@ -1361,6 +1390,7 @@ local-zone: "conspiracyhub.com." always_nxdomain
 local-zone: "contego.ws." always_nxdomain
 local-zone: "convivea.com." always_nxdomain
 local-zone: "conway-sports.com." always_nxdomain
+local-zone: "coolmoviejagg.pro." always_nxdomain
 local-zone: "coolmoviezone.online." always_nxdomain
 local-zone: "coolwareznik.net." always_nxdomain
 local-zone: "coppersurfer.tk." always_nxdomain
@@ -1514,6 +1544,7 @@ local-zone: "cyberphoenix.org." always_nxdomain
 local-zone: "capital.cyberserver.hu." always_nxdomain
 local-zone: "cyberwarez.info." always_nxdomain
 local-zone: "cyclingtorrents.nl." always_nxdomain
+local-zone: "cynemas.online." always_nxdomain
 local-zone: "cyonix.to." always_nxdomain
 local-zone: "cytu.be." always_nxdomain
 local-zone: "torrents.czteam.ro." always_nxdomain
@@ -1535,6 +1566,7 @@ local-zone: "damedesuyo.com." always_nxdomain
 local-zone: "danger.lv." always_nxdomain
 local-zone: "danimados.com." always_nxdomain
 local-zone: "danishbits.org." always_nxdomain
+local-zone: "danishtorrents.org." always_nxdomain
 local-zone: "dark-angel.ws." always_nxdomain
 local-zone: "darkanime.stream." always_nxdomain
 local-zone: "darkdata.net." always_nxdomain
@@ -1612,6 +1644,7 @@ local-zone: "demons-eye.org." always_nxdomain
 local-zone: "dendox.org." always_nxdomain
 local-zone: "azn-project.depthstrike.com." always_nxdomain
 local-zone: "derechosmadretierra.org." always_nxdomain
+local-zone: "derpyradio.net." always_nxdomain
 local-zone: "desfichiers.com." always_nxdomain
 local-zone: "deshonlinebd.com." always_nxdomain
 local-zone: "desi6.com." always_nxdomain
