--- a/unbound/native.huawei.blacklist.conf
+++ b/unbound/native.huawei.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 22 Jun 2023 21:20 UTC
-# Version: 2023.0622.2120.07
+# Last modified: 23 Jun 2023 21:57 UTC
+# Version: 2023.0623.2157.53
 # Syntax: Unbound
-# Number of entries: 61
+# Number of entries: 62
 #
 server:
 local-zone: "ubacollect-drcn.cloud.dbankcloud.cn." always_nxdomain
@@ -23,6 +23,7 @@ local-zone: "datacollector-drru.dt.dbankcloud.ru." always_nxdomain
 local-zone: "hisearch-dra.dt.dbankcloud.com." always_nxdomain
 local-zone: "metrics.dt.dbankcloud.cn." always_nxdomain
 local-zone: "metrics-dra.dt.dbankcloud.cn." always_nxdomain
+local-zone: "metrics-dre.dt.dbankcloud.asia." always_nxdomain
 local-zone: "metrics-dre.dt.dbankcloud.cn." always_nxdomain
 local-zone: "metrics1-drcn.dt.dbankcloud.cn." always_nxdomain
 local-zone: "metrics5.dt.dbankcloud.ru." always_nxdomain
