--- a/unbound/doh-vpn-proxy-bypass.blacklist.conf
+++ b/unbound/doh-vpn-proxy-bypass.blacklist.conf
@@ -4,10 +4,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 23 Jun 2023 21:45 UTC
-# Version: 2023.0623.2145.23
+# Last modified: 24 Jun 2023 21:37 UTC
+# Version: 2023.0624.2137.55
 # Syntax: Unbound
-# Number of entries: 6100
+# Number of entries: 6106
 #
 server:
 local-zone: "0000a-fast-proxy.de." always_nxdomain
@@ -217,6 +217,8 @@ local-zone: "adguard.beliefanx.cn." always_nxdomain
 local-zone: "bellproxy.com." always_nxdomain
 local-zone: "dns.belnet.be." always_nxdomain
 local-zone: "dns.benpro.fr." always_nxdomain
+local-zone: "openvpnpptp.bese.info." always_nxdomain
+local-zone: "openvpnpptpserver.bese.info." always_nxdomain
 local-zone: "bestfreevpn.com." always_nxdomain
 local-zone: "bestproxy.xyz." always_nxdomain
 local-zone: "bestssh.net." always_nxdomain
@@ -288,6 +290,7 @@ local-zone: "bunkerbustervpn.com." always_nxdomain
 local-zone: "byewall.com." always_nxdomain
 local-zone: "bypass.pw." always_nxdomain
 local-zone: "bypasser.us." always_nxdomain
+local-zone: "bypassfw.com." always_nxdomain
 local-zone: "bypassip.com." always_nxdomain
 local-zone: "bypasskey.com." always_nxdomain
 local-zone: "bypassproxyfree.com." always_nxdomain
@@ -295,6 +298,7 @@ local-zone: "bypasstunnel.com." always_nxdomain
 local-zone: "bytzvpn.com." always_nxdomain
 local-zone: "c-dns.com." always_nxdomain
 local-zone: "cactusvpn.com." always_nxdomain
+local-zone: "canadaproxy.info." always_nxdomain
 local-zone: "cantblockthis.org." always_nxdomain
 local-zone: "cantfindme.org." always_nxdomain
 local-zone: "caproxies.info." always_nxdomain
@@ -389,6 +393,7 @@ local-zone: "onlineproxy.co.uk." always_nxdomain
 local-zone: "proxay.co.uk." always_nxdomain
 local-zone: "proxify.co.uk." always_nxdomain
 local-zone: "proxywebsite.co.uk." always_nxdomain
+local-zone: "quickproxy.co.uk." always_nxdomain
 local-zone: "rfastvpn.co.cc." always_nxdomain
 local-zone: "sbdns.co.in." always_nxdomain
 local-zone: "secvpnproxy.co.cc." always_nxdomain
@@ -471,6 +476,7 @@ local-zone: "dns.d4d.moe." always_nxdomain
 local-zone: "dns.d94.xyz." always_nxdomain
 local-zone: "dns.d96.info." always_nxdomain
 local-zone: "dabmix.com." always_nxdomain
+local-zone: "darknet.to." always_nxdomain
 local-zone: "proxy.darkvpn.com." always_nxdomain
 local-zone: "mail.data.haus." always_nxdomain
 local-zone: "doh.datacore.ch." always_nxdomain
@@ -687,6 +693,7 @@ local-zone: "free-vpn.xyz." always_nxdomain
 local-zone: "freeanimesonline.com." always_nxdomain
 local-zone: "freebypassproxy.com." always_nxdomain
 local-zone: "freecanadavpn.com." always_nxdomain
+local-zone: "freecavpn.com." always_nxdomain
 local-zone: "freecloudvpn.com." always_nxdomain
 local-zone: "freedevpn.com." always_nxdomain
 local-zone: "freedom.cx." always_nxdomain
@@ -4993,7 +5000,6 @@ local-zone: "let-vpn.com." always_nxdomain
 local-zone: "letshide.me." always_nxdomain
 local-zone: "doh.libredns.gr." always_nxdomain
 local-zone: "dot.libredns.gr." always_nxdomain
-local-zone: "dns.lightmaster.pw." always_nxdomain
 local-zone: "likeproxy.com." always_nxdomain
 local-zone: "limevpn.com." always_nxdomain
 local-zone: "sby-doh.limotelu.org." always_nxdomain
