--- a/unbound/dyndns.blacklist.conf
+++ b/unbound/dyndns.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 23 Jun 2023 21:48 UTC
-# Version: 2023.0623.2148.27
+# Last modified: 24 Jun 2023 21:41 UTC
+# Version: 2023.0624.2141.11
 # Syntax: Unbound
-# Number of entries: 1558
+# Number of entries: 1564
 #
 server:
 local-zone: "0000000000000000000000.com." always_nxdomain
@@ -281,6 +281,7 @@ local-zone: "ddnsfree.com." always_nxdomain
 local-zone: "ddnsgeek.com." always_nxdomain
 local-zone: "ddnsguru.com." always_nxdomain
 local-zone: "ddnsking.com." always_nxdomain
+local-zone: "ddnslive.com." always_nxdomain
 local-zone: "ddnss.ch." always_nxdomain
 local-zone: "ddnss.de." always_nxdomain
 local-zone: "ddnss.org." always_nxdomain
@@ -311,6 +312,8 @@ local-zone: "dmchub.org." always_nxdomain
 local-zone: "dmtr.ru." always_nxdomain
 local-zone: "dnet.hu." always_nxdomain
 local-zone: "dnmcoffman.com." always_nxdomain
+local-zone: "dns.army." always_nxdomain
+local-zone: "dns.navy." always_nxdomain
 local-zone: "dns-auth.com." always_nxdomain
 local-zone: "dns-auth.net." always_nxdomain
 local-zone: "dns-cloud.net." always_nxdomain
@@ -343,6 +346,7 @@ local-zone: "dnsis.us." always_nxdomain
 local-zone: "dnsiskinky.com." always_nxdomain
 local-zone: "dnsking.ch." always_nxdomain
 local-zone: "dnslive.net." always_nxdomain
+local-zone: "dnsnet.info." always_nxdomain
 local-zone: "dnsnew.org." always_nxdomain
 local-zone: "dnsomatic.com." always_nxdomain
 local-zone: "dnspod.cn." always_nxdomain
@@ -439,6 +443,7 @@ local-zone: "dyndns-server.com." always_nxdomain
 local-zone: "dyndns-web.com." always_nxdomain
 local-zone: "dyndns-wiki.com." always_nxdomain
 local-zone: "dyndns-work.com." always_nxdomain
+local-zone: "dyndnss.net." always_nxdomain
 local-zone: "dyndnssec.de." always_nxdomain
 local-zone: "dyndnsservices.com." always_nxdomain
 local-zone: "dynect.net." always_nxdomain
@@ -460,6 +465,7 @@ local-zone: "dynuddns.net." always_nxdomain
 local-zone: "dynup.net." always_nxdomain
 local-zone: "dynv4.net." always_nxdomain
 local-zone: "dynv6.com." always_nxdomain
+local-zone: "dynv6.net." always_nxdomain
 local-zone: "dynvpn.de." always_nxdomain
 local-zone: "dyyndns.net." always_nxdomain
 local-zone: "e-m-a-i-l.org." always_nxdomain
