update anti piracy

--- a/unbound/anti.piracy.blacklist.conf
+++ b/unbound/anti.piracy.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 23 Jun 2023 21:51 UTC
-# Version: 2023.0623.2151.40
+# Last modified: 24 Jun 2023 21:43 UTC
+# Version: 2023.0624.2143.12
 # Syntax: Unbound
-# Number of entries: 6793
+# Number of entries: 6813
 #
 server:
 local-zone: "zer0day.000webhostapp.com." always_nxdomain
@@ -907,6 +907,7 @@ local-zone: "blackcats-games.net." always_nxdomain
 local-zone: "blackhatprotools.com." always_nxdomain
 local-zone: "blackhatprotools.net." always_nxdomain
 local-zone: "blackhatprotools.org." always_nxdomain
+local-zone: "blackphoenix.info." always_nxdomain
 local-zone: "blackrevolution.ro." always_nxdomain
 local-zone: "tracker.blacksparrowmedia.net." always_nxdomain
 local-zone: "blacktiesports.net." always_nxdomain
@@ -977,6 +978,7 @@ local-zone: "blues-brothers.biz." always_nxdomain
 local-zone: "bluewarez.pl." always_nxdomain
 local-zone: "blutopia.xyz." always_nxdomain
 local-zone: "bmitbd.com." always_nxdomain
+local-zone: "bmovies.is." always_nxdomain
 local-zone: "bmovies.nl." always_nxdomain
 local-zone: "bms-hosxp.com." always_nxdomain
 local-zone: "bmtorrents.net." always_nxdomain
@@ -1103,6 +1105,7 @@ local-zone: "bulextorrent.org." always_nxdomain
 local-zone: "bulkpeers.com." always_nxdomain
 local-zone: "bundesliga-live.stream." always_nxdomain
 local-zone: "bundesliga-streams.net." always_nxdomain
+local-zone: "buny.uk." always_nxdomain
 local-zone: "torrent.burgas.org." always_nxdomain
 local-zone: "tr.burnabyhighstar.com." always_nxdomain
 local-zone: "burningseries.ac." always_nxdomain
@@ -1120,6 +1123,7 @@ local-zone: "bwtorrents.com." always_nxdomain
 local-zone: "tracker.bwtorrents.tv." always_nxdomain
 local-zone: "byfiles.com." always_nxdomain
 local-zone: "bygfx.com." always_nxdomain
+local-zone: "bypassed.life." always_nxdomain
 local-zone: "bypassed.zone." always_nxdomain
 local-zone: "byte.to." always_nxdomain
 local-zone: "bytecollectors.com." always_nxdomain
@@ -1226,6 +1230,7 @@ local-zone: "cinematik.net." always_nxdomain
 local-zone: "tracker.cinemaz.to." always_nxdomain
 local-zone: "cinemitas.tv." always_nxdomain
 local-zone: "cinenews.info." always_nxdomain
+local-zone: "cinestreamz.com." always_nxdomain
 local-zone: "cinevood.cyou." always_nxdomain
 local-zone: "cinevood.work." always_nxdomain
 local-zone: "cinewhale.com." always_nxdomain
@@ -1414,6 +1419,7 @@ local-zone: "cpasbien.sh." always_nxdomain
 local-zone: "cpasbien.to." always_nxdomain
 local-zone: "cpasbien3.pro." always_nxdomain
 local-zone: "cpasbienss.fr." always_nxdomain
+local-zone: "cpleft.com." always_nxdomain
 local-zone: "cpturbo.org." always_nxdomain
 local-zone: "crack.ms." always_nxdomain
 local-zone: "crack.ru." always_nxdomain
@@ -1678,6 +1684,7 @@ local-zone: "dfox.it." always_nxdomain
 local-zone: "mixes.dfx.at." always_nxdomain
 local-zone: "dhakadownload.com." always_nxdomain
 local-zone: "dhakaftp.com." always_nxdomain
+local-zone: "dhakaiptv.com." always_nxdomain
 local-zone: "dhakamovie.com." always_nxdomain
 local-zone: "dhakasports.com." always_nxdomain
 local-zone: "dht.dhtclub.com." always_nxdomain
@@ -1786,6 +1793,7 @@ local-zone: "downloadarch.com." always_nxdomain
 local-zone: "popcorn-time.en.downloadastro.com." always_nxdomain
 local-zone: "downloademule.org." always_nxdomain
 local-zone: "downloadforum.com." always_nxdomain
+local-zone: "downloadfreenewmovies.info." always_nxdomain
 local-zone: "downloadinfo.org." always_nxdomain
 local-zone: "downloadjet.org." always_nxdomain
 local-zone: "downloadmart.org." always_nxdomain
@@ -1990,6 +1998,7 @@ local-zone: "retracker.nn.ertelecom.ru." always_nxdomain
 local-zone: "retracker.perm.ertelecom.ru." always_nxdomain
 local-zone: "elmellowebmaster.es.tl." always_nxdomain
 local-zone: "eshiel.com." always_nxdomain
+local-zone: "estrenoslatinos.com." always_nxdomain
 local-zone: "ethor.net." always_nxdomain
 local-zone: "tracker.etn.fm." always_nxdomain
 local-zone: "etorrentsmexico.com." always_nxdomain
@@ -2151,6 +2160,7 @@ local-zone: "filefactory.com." always_nxdomain
 local-zone: "filefound.com." always_nxdomain
 local-zone: "filejungle.com." always_nxdomain
 local-zone: "fileland.pl." always_nxdomain
+local-zone: "fileleechers.info." always_nxdomain
 local-zone: "filelist.io." always_nxdomain
 local-zone: "filelist.it." always_nxdomain
 local-zone: "filelist.org." always_nxdomain
@@ -2188,6 +2198,7 @@ local-zone: "filmheaven.com." always_nxdomain
 local-zone: "kinox.filmi.space." always_nxdomain
 local-zone: "filmi-torrents.com." always_nxdomain
 local-zone: "filmitorrent.net." always_nxdomain
+local-zone: "filmitorrent-org.site." always_nxdomain
 local-zone: "filmlicious.net." always_nxdomain
 local-zone: "filmobo.com." always_nxdomain
 local-zone: "filmoff.net." always_nxdomain
@@ -2289,6 +2300,7 @@ local-zone: "foggystream.com." always_nxdomain
 local-zone: "fonoon.org." always_nxdomain
 local-zone: "tv.foorty.net." always_nxdomain
 local-zone: "football-live.stream." always_nxdomain
+local-zone: "footballstream.to." always_nxdomain
 local-zone: "footybite.com." always_nxdomain
 local-zone: "foreverdrowning.com." always_nxdomain
 local-zone: "tracker.foreverpirates.co." always_nxdomain
@@ -2309,6 +2321,7 @@ local-zone: "free-telecharger.net." always_nxdomain
 local-zone: "free-telecharger.org." always_nxdomain
 local-zone: "free-telecharger.top." always_nxdomain
 local-zone: "free-telecharger.xyz." always_nxdomain
+local-zone: "open.free-tracker.ga." always_nxdomain
 local-zone: "free4pc.org." always_nxdomain
 local-zone: "freebfg.org." always_nxdomain
 local-zone: "freebookspot.es." always_nxdomain
@@ -2418,6 +2431,7 @@ local-zone: "gadget-vault.com." always_nxdomain
 local-zone: "galacticcentral.org." always_nxdomain
 local-zone: "gamato.info." always_nxdomain
 local-zone: "game-files.net." always_nxdomain
+local-zone: "game-torrent.info." always_nxdomain
 local-zone: "game3rb.com." always_nxdomain
 local-zone: "gameburnworld.com." always_nxdomain
 local-zone: "uploads.gamecoast.net." always_nxdomain
@@ -2529,12 +2543,14 @@ local-zone: "gogoanime.vc." always_nxdomain
 local-zone: "gogomovies.to." always_nxdomain
 local-zone: "gold-films.ru." always_nxdomain
 local-zone: "goldenshara.com." always_nxdomain
+local-zone: "goldesel.sx." always_nxdomain
 local-zone: "goldesel.to." always_nxdomain
 local-zone: "goldhiphop.pro." always_nxdomain
 local-zone: "goldmovies.to." always_nxdomain
 local-zone: "goldpravda.net." always_nxdomain
 local-zone: "goloady.com." always_nxdomain
 local-zone: "gomoviefree.sc." always_nxdomain
+local-zone: "gomovies.click." always_nxdomain
 local-zone: "gomovies.film." always_nxdomain
 local-zone: "gomovies.guru." always_nxdomain
 local-zone: "gomovies.kim." always_nxdomain
@@ -2557,6 +2573,7 @@ local-zone: "gostream-hd.xyz." always_nxdomain
 local-zone: "gotwoot.net." always_nxdomain
 local-zone: "gounlimited.me." always_nxdomain
 local-zone: "gounlimited.to." always_nxdomain
+local-zone: "govod.tv." always_nxdomain
 local-zone: "ipv6.govt.hu." always_nxdomain
 local-zone: "gowatchseries.ac." always_nxdomain
 local-zone: "gowatchseries.co." always_nxdomain
@@ -2571,6 +2588,7 @@ local-zone: "greek-torrent.net." always_nxdomain
 local-zone: "greek-tracker.com." always_nxdomain
 local-zone: "greekshare.net." always_nxdomain
 local-zone: "greencracks.com." always_nxdomain
+local-zone: "greetingsonlinebd.com." always_nxdomain
 local-zone: "tracker.grepler.com." always_nxdomain
 local-zone: "greylodge.org." always_nxdomain
 local-zone: "grifon.info." always_nxdomain
@@ -2659,6 +2677,7 @@ local-zone: "hdmovie2.com." always_nxdomain
 local-zone: "hdmovie99.co." always_nxdomain
 local-zone: "hdmoviesnow.com." always_nxdomain
 local-zone: "hdmuv.com." always_nxdomain
+local-zone: "hdonline.eu." always_nxdomain
 local-zone: "hdpopcorns.org." always_nxdomain
 local-zone: "tracker.hdpost.top." always_nxdomain
 local-zone: "hdreactor.info." always_nxdomain
@@ -2806,6 +2825,7 @@ local-zone: "iktin.ru." always_nxdomain
 local-zone: "ilcorsaronero.info." always_nxdomain
 local-zone: "ilcorsaronero.link." always_nxdomain
 local-zone: "tracker.ilibr.org." always_nxdomain
+local-zone: "illuminatenboard.com." always_nxdomain
 local-zone: "ilovetorrents.com." always_nxdomain
 local-zone: "imacapps.co." always_nxdomain
 local-zone: "imastudios.com." always_nxdomain
