--- a/unbound/nosafesearch.blacklist.conf
+++ b/unbound/nosafesearch.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 22 Jun 2023 07:19 UTC
-# Version: 2023.0622.0719.18
+# Last modified: 25 Jun 2023 21:41 UTC
+# Version: 2023.0625.2141.53
 # Syntax: Unbound
-# Number of entries: 140
+# Number of entries: 141
 #
 server:
 local-zone: "search.0xcb.dev." always_nxdomain
@@ -135,6 +135,7 @@ local-zone: "search.spaeth.me." always_nxdomain
 local-zone: "search.st8.at." always_nxdomain
 local-zone: "startpage.com." always_nxdomain
 local-zone: "search.stinpriza.org." always_nxdomain
+local-zone: "suchfeuer.de." always_nxdomain
 local-zone: "searx.sulu.me." always_nxdomain
 local-zone: "searx.sunless.cloud." always_nxdomain
 local-zone: "searx.thegreenwebfoundation.org." always_nxdomain
