--- a/unbound/doh-vpn-proxy-bypass.blacklist.conf
+++ b/unbound/doh-vpn-proxy-bypass.blacklist.conf
@@ -4,10 +4,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 24 Jun 2023 21:37 UTC
-# Version: 2023.0624.2137.55
+# Last modified: 25 Jun 2023 21:42 UTC
+# Version: 2023.0625.2142.41
 # Syntax: Unbound
-# Number of entries: 6106
+# Number of entries: 6109
 #
 server:
 local-zone: "0000a-fast-proxy.de." always_nxdomain
@@ -5226,6 +5226,7 @@ local-zone: "opentunnel.net." always_nxdomain
 local-zone: "openvpn.com." always_nxdomain
 local-zone: "openvpn.net." always_nxdomain
 local-zone: "openvpn-ssh.com." always_nxdomain
+local-zone: "openzend.com." always_nxdomain
 local-zone: "opera.com." always_nxdomain
 local-zone: "opera.software." always_nxdomain
 local-zone: "opera-api.com." always_nxdomain
@@ -5261,6 +5262,7 @@ local-zone: "parrotsec.org." always_nxdomain
 local-zone: "a.passcloud.xyz." always_nxdomain
 local-zone: "i.passcloud.xyz." always_nxdomain
 local-zone: "doh.gcp.pathofgrace.com." always_nxdomain
+local-zone: "leo.paulmihaipavel.com." always_nxdomain
 local-zone: "rpz-public-resolver1.rrdns.pch.net." always_nxdomain
 local-zone: "peekatwork.com." always_nxdomain
 local-zone: "fuchur.pentament.de." always_nxdomain
@@ -5500,6 +5502,7 @@ local-zone: "rapidproxy.us." always_nxdomain
 local-zone: "rayneau.fr." always_nxdomain
 local-zone: "dns.reckoningslug.name." always_nxdomain
 local-zone: "redschool.info." always_nxdomain
+local-zone: "redus.info." always_nxdomain
 local-zone: "relayon.org." always_nxdomain
 local-zone: "remotedesktop.com." always_nxdomain
 local-zone: "kaitain.restena.lu." always_nxdomain
