--- a/unbound/dyndns.blacklist.conf
+++ b/unbound/dyndns.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 24 Jun 2023 21:41 UTC
-# Version: 2023.0624.2141.11
+# Last modified: 25 Jun 2023 21:44 UTC
+# Version: 2023.0625.2144.47
 # Syntax: Unbound
-# Number of entries: 1564
+# Number of entries: 1567
 #
 server:
 local-zone: "0000000000000000000000.com." always_nxdomain
@@ -16,6 +16,7 @@ local-zone: "100mountain.com." always_nxdomain
 local-zone: "10dv.com." always_nxdomain
 local-zone: "120v.ac." always_nxdomain
 local-zone: "1337.cx." always_nxdomain
+local-zone: "16-b.it." always_nxdomain
 local-zone: "1cooldns.com." always_nxdomain
 local-zone: "1dumb.com." always_nxdomain
 local-zone: "2288.org." always_nxdomain
@@ -26,6 +27,7 @@ local-zone: "2mydns.net." always_nxdomain
 local-zone: "2p.fm." always_nxdomain
 local-zone: "2waky.com." always_nxdomain
 local-zone: "3-a.net." always_nxdomain
+local-zone: "32-b.it." always_nxdomain
 local-zone: "3322.net." always_nxdomain
 local-zone: "3322.org." always_nxdomain
 local-zone: "360digit.com." always_nxdomain
@@ -962,6 +964,7 @@ local-zone: "medittech.com." always_nxdomain
 local-zone: "mefound.com." always_nxdomain
 local-zone: "mein-vigor.de." always_nxdomain
 local-zone: "melakaboy.com." always_nxdomain
+local-zone: "merlitec.com." always_nxdomain
 local-zone: "merseine.com." always_nxdomain
 local-zone: "merseine.nu." always_nxdomain
 local-zone: "merseine.org." always_nxdomain
