--- a/unbound/hoster.blacklist.conf
+++ b/unbound/hoster.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 23 Jun 2023 21:49 UTC
-# Version: 2023.0623.2149.55
+# Last modified: 25 Jun 2023 21:46 UTC
+# Version: 2023.0625.2146.16
 # Syntax: Unbound
-# Number of entries: 2060
+# Number of entries: 2061
 #
 server:
 local-zone: "000a.de." always_nxdomain
@@ -1482,6 +1482,7 @@ local-zone: "overblog.net." always_nxdomain
 local-zone: "own-free-website.com." always_nxdomain
 local-zone: "ozq.de." always_nxdomain
 local-zone: "p.gp." always_nxdomain
+local-zone: "p2a.pl." always_nxdomain
 local-zone: "p2blogs.com." always_nxdomain
 local-zone: "pacbell.net." always_nxdomain
 local-zone: "page.tl." always_nxdomain
